added controller, before model

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,19 +11,15 @@
 <body>
     <div class="container">
 
-        <div class="header">
-            <h1>Addis Book Store</h1>
-            <p id="quote">The reading of all good books is like conversation with the finest (people) of the past centuries.” – Descartes</p>
-
-        </div>
+        <%- include('includes/header') %>
         
         <div class="nav">
             <ul>
-                <li id=""><a href="">Store</a></li>
+                <li id=""><a href="/">Store</a></li>
                 <li id=""><a href="">Dashboard</a></li>
                 <li id=""><a href="">Orders</a></li>
                 <li id=""><a href="">Accounting</a></li>
-                <li id=""><a href="index.html">Customer Page</a></li>
+                <li id=""><a href="/admin/add-product">Admin Page</a></li>
             </ul>
         </div>
        
