--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,11 +11,7 @@
 <body>
     <div class="container">
 
-        <div class="header">
-            <h1>Addis Book Store</h1>
-            <p id="quote">The reading of all good books is like conversation with the finest (people) of the past centuries.” – Descartes</p>
-
-        </div>
+        <%- include('includes/header') %>
         
         <div class="nav">
             <ul>
@@ -24,7 +20,7 @@
                 <li id=""><a href="">Reviews</a></li>
                 <li id=""><a href="">About</a></li>
                 <li id=""><a href="">Contact</a></li>
-                <li id=""><a href="admin.html">Admin Page</a></li>
+                <li id=""><a href="/admin/add-product">Admin Page</a></li>
             </ul>
         </div>
         <div class="main">
