--- a/public/admin.css
+++ b/public/admin.css
@@ -56,7 +56,6 @@ body {
     border-color:steelblue;
     height: auto;
     overflow: hidden;
-    
 }
 
 .new-book-div {
@@ -81,4 +80,10 @@ input {
     position: absolute;
    left: 30%;
    margin: 20px;
+}
+
+.center {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
 }
