--- a/public/admin.css
+++ b/public/admin.css
@@ -52,38 +52,60 @@ body {
 
 .main {
     margin-top: 20px;
-    border-style: solid;
-    border-color:steelblue;
     height: auto;
     overflow: hidden;
 }
 
 .new-book-div {
     margin: 50px;
-    width: 55%;
+    width: auto;
     height: auto;
-    border: solid 0.1px gray;
+}
+
+#new-book-form {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;    
 }
 
 .input-field {
     display: block;
-    margin: 20px    ;
+    margin: 5px    ;
 }
+
+.input-field p {
+    text-align: left;
+    margin-left:20%;
+}
+
 
 input {
     margin:10px;
+    margin-top: 0.5px;
     min-width: 60%;
-    
+    height: 2em;
+    border-radius: 6px;
+}
+
+.input-label {
+    margin: 0;
+    padding: 0;
+    margin-left: 10px;
+    font-size: 0.8em;
 }
 
 #register_book_button {
-    position: absolute;
-   left: 30%;
-   margin: 20px;
+   
 }
 
 .center {
-    position: absolute;
+    display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
+.center-text {
+    text-align: center;
+}
+
