--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -28,7 +28,7 @@
             <div class="new-book-div">
                 <h3 class="center center-text"><% if(edit) {%>Edit Product<%} else {%>Add Product<%} %></h3>
                 <div class="form-wrapper">
-                    <form id="new-book-form" class="center" action="/admin/savebook" method="POST">
+                    <form id="new-book-form" class="center" action="/admin/<% if(edit) {%>savebook/?edit=true<%} else {%>savebook<%} %>" method="POST">
                         <div class="input-field">
                             <p class="input-label">Title</p>
                            <input type="text" id="book_title" name="BookTitle" value="<% if(edit) {%><%= editBook.title %><%} else {%><%} %>" />
@@ -53,7 +53,10 @@
                             <p class="input-label">Cover Image</p>
                             <input type="text" id="Price" name="Cover" value="<% if(edit) {%><%= editBook.img %><%} else {%><%} %>">
                         </div class="input-field">
-                        <button id="register_book_button" class="btn center" type="submit" >Register</button>
+
+                        <input type="hidden" id="id" name="Id" value="<% if (edit) {%> <%= editBook.id %><%} else {%><%=null%><%} %>">
+
+                        <button id="register_book_button" class="btn center" type="submit" ><% if(edit) {%>Update Product<%} else {%>Add Product<%} %></button>
                     </form>
                 </div>
             </div>
@@ -71,7 +74,7 @@
                         <form action="/admin/add-product/<%= element.id %>/?edit=true" method="POST">
                             <button type="submit" class="btn">Edit</button>
                         </form>                        
-                        <form action="/delete/$<%= element.id %>" method="POST">
+                        <form action="/admin/delete/<%= element.id %>" method="POST">
                             <button type="submit" class="btn">Delete</button>
                         </form>
 
