styling, navigation, cart

--- a/public/admin.css
+++ b/public/admin.css
@@ -24,7 +24,7 @@ body {
 #quote {
     color:#D5D36A;
 }
-.nav {
+/* .nav {
     background-color: #233541;
     overflow: hidden;
     margin: 0px;
@@ -48,7 +48,7 @@ body {
     color: white;
     text-decoration: none;
 
-}
+} */
 
 .main {
     margin-top: 20px;
