--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/admin.css">
+    <link rel="stylesheet" href="/main.css">
     <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic&display=swap" rel="stylesheet">
 
 </head>
@@ -19,7 +20,7 @@
                 <li id=""><a href="">Dashboard</a></li>
                 <li id=""><a href="">Orders</a></li>
                 <li id=""><a href="">Accounting</a></li>
-                <li id=""><a href="/admin/add-product/0">Admin Page</a></li>
+                <li id=""><a href="/admin/add-product/0">Admin</a></li>
             </ul>
         </div>
        
