--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                 <li id=""><a href="/cart">Cart</a></li>
                 <li id=""><a href="">About Us</a></li>
                 <li id=""><a href="">Contact</a></li>
-                <li id=""><a href="/admin/add-product/0">Admin Page</a></li>
+                <li id=""><a href="/admin/add-product/0">Admin</a></li>
             </ul>
         </div>
 
