--- a/public/cart.css
+++ b/public/cart.css
@@ -7,18 +7,33 @@
     margin-right: auto;
 }
 
+@media only screen and (max-width: 1100px) {
+    
+    .cart { 
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
 .cart-item {
     vertical-align: middle;
     border: solid 1px rgb(126, 173, 116);
     border-radius: 10px;
     font-size: 1.5rem;
-    height: 3rem;
+    height: auto;
     margin: 10px;
     padding: 20px;
     padding-bottom: 5px;
     display: grid;
     grid-template-areas: 
     "cover title price qty delete" ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.book-cover {
+    max-height: 100px;
 }
 
 .book-title {
@@ -29,19 +44,18 @@
 .book-price {
     grid-area: price;
     text-align: center;
-    margin-left: 100px;
-    justify-self: start;
+    justify-self: center;
 }
 
 .input-field {
     grid-area: qty;
-    display: inline;
-    margin-left: 30px;
     font-size: 1rem;
+    text-align: center;
     justify-self: center;
 }
 
 .book-qty {
+    margin-top: 5px;
     width: 50px;
     border-radius: 5px;
     
