--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -5,6 +5,6 @@
         <li id=""><a href="">Cart</a></li>
         <li id=""><a href="">About Us</a></li>
         <li id=""><a href="">Contact</a></li>
-        <li id=""><a href="/admin/add-product/0">Admin Page</a></li>
+        <li id=""><a href="/admin/add-product/0">Admin</a></li>
     </ul>
 </div>
